--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,6 @@
     <string name="menu_home">Főoldal</string>
     <string name="menu_filter">Szűrő</string>
     <string name="menu_archive">Archívum</string>
-    <string name="menu_send">Send</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
     <string name="personalise">Személyre szabás</string>
+    <string name="menu_settings">Beállítások</string>
 </resources>
