13ik kommit cikkek betöltve, megjelenítve, kép formázva, szerző is van létrehozva a tabok beállítások menü kb. berendezve, kb csinál dolgokat szűrő kb kész archívum kérdéses jobban próbálkozik a cikkek betöltésével tud értesítést küldeni, bár nem teszi egyenlőre

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="menu_archive">Archívum</string>
     <string name="personalise">Személyre szabás</string>
     <string name="menu_settings">Beállítások</string>
+    <string name="service_name">KÁTÉ háttérfolyamat</string>
 </resources>
