19ik kommit cikkek betöltve, megjelenítve, kép formázva, szerző is van létrehozva a tabok beállítások menü kb. berendezve, kb csinál dolgokat szűrő kész archívum kérdéses jobban próbálkozik a cikkek betöltésével tud értesítést küldeni küld értesítéseket az új cikkekről, ha van net, talán már nem bugos elmenti a beállításokat elmenti a cikkeket, visszatöltésnél betölti őket url-ként betölti az archívumot töltőképernyő stílusok vannak, de nem lehet váltani

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="personalise">Személyre szabás</string>
     <string name="menu_settings">Beállítások</string>
     <string name="service_name">KÁTÉ háttérfolyamat</string>
+    <string name="menu_styles">Stílusok</string>
 </resources>
